Added FootballTeam controller; tests; expiry change